tricorders/rust/tests/snapshots/tree_splitter_tests__t001_simple_fn_graph-2.snap
---
source: tricorders/rust/tests/tree_splitter_tests.rs
expression: "format!(\"{}\", & filtered_source)"
---
#![feature(prelude_import)]
#![no_std]
#[prelude_import]
use ::std::prelude::rust_2015::*;


fn potato() -> bool {
    false
}
fn salad() -> bool {
    potato()
}
#[allow(dead_code)]
fn main() -> () {
    {
        ::std::io::_print(format_args!("Hello World!\n"));
    };
    salad();
}
#[rustc_main]
pub fn main() -> () {
    extern crate test;
    test::test_main_static(&[])
}

