tricorders/rust/tests/snapshots/tree_splitter_tests__t003_get_ast_on_tests_inside_of_mods.snap
---
source: tricorders/rust/tests/tree_splitter_tests.rs
expression: deps
---
[
    "add_two",
    "assert_failed",
]
